@@ -10,11 +10,6 @@ Legend:
 
     IN PROGRESS
 ---------------------
-  FIX <pino> _rewrite_ & simplify the scheduler functions which schedule
-      new downloads, atm they are too messy
-  FIX <pino> _rewrite_ & simplify the scheduler functions which manage the
-      downloads, atm they are too messy and don't work properly
-
 
         TODO
 ---------------------
@@ -32,8 +27,6 @@ SHORT-TERM (URGENT):
   ADD <dario> add a popupmenu to add or delete groups by right-clicking on them.
 
   -- MAINVIEW --
-  FIX <dario> when resizing the columns of the mainview and the groupspanel
-      the items are not updated correctly
   ADD <dario> make it possible to drag a transfer in a group inside the
       mainview or in the groups visible in the groupspanel.
   ADD <dario> Implement the selection of a specific group. In this way 
